--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
+  "name": "screenshot_app",
+  "version": "1.0.0",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Abhimanyu012/screenshot_app.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Abhimanyu012/screenshot_app/issues"
+  },
+  "homepage": "https://github.com/Abhimanyu012/screenshot_app#readme",
   "dependencies": {
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
-  }
+    "express": "^5.1.0",
+    "puppeteer": "^24.9.0"
+  },
+  "description": ""
 }
